--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>H1</h1>
@@ -12,5 +13,7 @@
     <h4>H4</h4>
     <h5>H5</h5>
     kyle!
+
+    <script src="app.js"></script>
   </body>
 </html>
