--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>H1</h1>
-    <h2>H2</h2>
-    <h3>H3</h3>
-    <h4>H4</h4>
-    <h5>H5</h5>
-    kyle!
-
+    <table>
+      <tr>
+        <th>contact us</th>
+        <th>our services</th>
+        <th>carriers</th>
+        <th>about us</th>
+      </tr>
+    </table>
+    <h1>circuit savers!</h1>
+    <h2>
+      Electrical & maintenance problems? We are here to help and provide top
+      quality work!
+    </h2>
     <script src="app.js"></script>
   </body>
 </html>
