--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
   <body>
     <table>
       <tr>
-        <th>contact us</th>
-        <th>our services</th>
-        <th>carriers</th>
-        <th>about us</th>
+        <th>
+        <button class="A" type="button">about us</button>
+      </th>
+        <th>
+        <button class="B" type="button"> our services </button></th>
+        <th><button class="C" type="button"> carriers</th>
+        <th><button class="D" type="button"> About us</th>
       </tr>
     </table>
     <h1>circuit savers!</h1>
@@ -20,6 +23,7 @@
       Electrical & maintenance problems? We are here to help and provide top
       quality work!
     </h2>
+    <table class="T2"></table>
     <script src="app.js"></script>
   </body>
 </html>
