about us button working! +styles

--- a/aboutus.html
+++ b/aboutus.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="AUstyles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1 class="AU1">NOT FINISHED! CHECK BACK LATER!</h1>
+    <a href="index.html">
+        <button class="A" type="button">back!</button>
+      </th></a>
+  </body>
 </html>
