--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>frontpage</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <table>
       <tr>
         <th>
+          <a href="aboutus.html">
         <button class="A" type="button">about us</button>
-      </th>
+      </th></a>
         <th>
         <button class="B" type="button"> our services </button></th>
         <th><button class="C" type="button"> carriers</th>
