Our services button added + styles!

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <button class="A" type="button">about us</button>
       </th></a>
         <th>
-        <button class="B" type="button"> our services </button></th>
+          <a href="OurServices.html">
+        <button class="B" type="button"> our services </button></th></a>
         <th><button class="C" type="button"> carriers</th>
-        <th><button class="D" type="button"> About us</th>
+        <th><button class="D" type="button"> Contact us</th>
       </tr>
     </table>
     <h1>circuit savers!</h1>
