carriers button functionality + styles.

--- a/carriers.html
+++ b/carriers.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our services</title>
-    <link rel="stylesheet" href="OSstyles.css" />
+    <title>carriers</title>
+    <link rel="stylesheet" href="CA.css" />
   </head>
   <body>
-    <h1 class="OS1">NOT FINISHED! CHECK BACK LATER!</h1>
+    <h1 class="CA1">NOT FINISHED! CHECK BACK LATER!</h1>
     <a href="index.html">
         <button class="A" type="button">back!</button>
       </th></a>
   </body>
 </html>
-
