--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <th>
           <a href="OurServices.html">
         <button class="B" type="button"> our services </button></th></a>
-        <th><button class="C" type="button"> carriers</th>
+        <th>
+          <a href="carriers.html">
+        <button class="C" type="button"> carriers</button></th></a>
         <th><button class="D" type="button"> Contact us</th>
       </tr>
     </table>
