added contact us button functionality +styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <th>
           <a href="carriers.html">
         <button class="C" type="button"> carriers</button></th></a>
-        <th><button class="D" type="button"> Contact us</th>
+        <th>
+          <a href="contactus.html">
+          <button class="D" type="button"> Contact us</th></a>
       </tr>
     </table>
     <h1>circuit savers!</h1>
