About us page updated, CSS updated for about is, main page update.

--- a/aboutus.html
+++ b/aboutus.html
@@ -7,9 +7,20 @@
     <link rel="stylesheet" href="AUstyles.css" />
   </head>
   <body>
-    <h1 class="AU1">NOT FINISHED! CHECK BACK LATER!</h1>
-    <a href="index.html">
-        <button class="A" type="button">back!</button>
-      </th></a>
+           <table>
+          <tr>
+            <th>
+              <a href="index.html">
+                <button class="A" type="button">back!</button>
+          </th></a>
+            <th>
+            <h2 class="ZZ">About us!</h2></th></a>
+          </tr>
+        </table> 
+        <h3>we are an electrical company that you can go to for any problem! we will help you no matter what happneds in or around your home! You have a broken light? we can fix it, we will fix almost everything as our specalised employees have over 10 years of experience! But wait, we also have opened a store near you! come by and grab supplys for your DIY electrical work!</h3>
+        <h2>our employees!</h2>
+        <h3>they are trained in safety management and risk management so there will be NO issues on the job site! they are trained for 10 years to ensure the best quality work for the best customers!</h3>
+        <h2>our customer support specalists!</h2>
+        <h3>they are trained in supporting you to the best that we can provide by telling you any information you need to know or if somthing went wrong, you can report it to them! they are kind and compassionate towards you to ensure you are comfortable! </h3>
   </body>
 </html>
