--- a/fakesite/idex.html
+++ b/fakesite/idex.html
@@ -44,7 +44,8 @@
         </div>
       </div>
     </nav>
-
+<h1 class="title">curcuit savers</h1>
+<h2 class="slogan">Electrical  & maintenance problems? We are here to help and provide top quality work!</h2>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
